--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/date-time-chart/date-time-chart.component.scss
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/date-time-chart/date-time-chart.component.scss
@@ -10,3 +10,6 @@
    See the License for the specific language governing permissions and
    limitations under the License.
  */
+ .header-box {	 
+	 border: 1px solid #000000;
+ }
