--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/date-time-chart/date-time-chart.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/date-time-chart/date-time-chart.component.html
@@ -1,10 +1,12 @@
 <div class="time-chart">
 	<div class="time-chart-header">
 		<div *ngIf="showDays">
-			<div *ngFor="let periodMonth of periodMonths" [class]="header-box" [style.width.px]="1 * calendarService.DAY_WIDTH">>{{periodMonth.toJSDate() | date[format:'MMMM YYYY']}}</div>
+			<div *ngFor="let periodMonth of periodMonths" [class]="header-box" 
+				[style.width.px]="periodMonth.daysInMonth * calendarService.DAY_WIDTH">{{periodMonth.toJSDate() | date[format:'MMMM YYYY']}}</div>			
 		</div>
 		<div *ngIf="!showDays">
-			!showDays
+			<div *ngFor="let periodYear of periodYears" [class]="header-box" 
+				[style.width.px]="periodYear.daysInYear * calendarService.DAY_WIDTH">{{periodMonth.toJSDate() | date[format:'YYYY']}}</div>
 		</div>
 	</div>
 </div>
