--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/date-time-chart/date-time-chart.component.scss
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/date-time-chart/date-time-chart.component.scss
@@ -16,6 +16,10 @@
 	 text-align: center;	 
  }
  
+ .header-sunday {
+	 background-color: #adffb0;
+ }
+ 
  .header-line {
 	 display: flex;
 	 flex-wrap: nowrap;	 	 
