--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/date-time-chart/date-time-chart.component.scss
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/date-time-chart/date-time-chart.component.scss
@@ -55,3 +55,15 @@
 	 padding-left: 10px;
 	 width: fit-content;
  }
+ 
+ .prev-year {
+	 position: absolute;
+	 left: 2px;	
+	 z-index: 10; 
+ }
+ 
+ .next-year {
+	 position: absolute;
+	 right: 2px;
+	 z-index: 10;
+ }
