--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-timechart/portfolio-timechart.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-timechart/portfolio-timechart.component.html
@@ -1,3 +1,3 @@
 <p>portfolio-timechart works!</p>
 <div>{{selPortfolio?.id}}</div>
-<app-date-time-chart [start]="start" [items]="items" [showDays]="false"></app-date-time-chart>
+<app-date-time-chart [start]="start" [items]="items" [showDays]="showDays"></app-date-time-chart>
