--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/date-time-chart/date-time-chart.component.scss
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/date-time-chart/date-time-chart.component.scss
@@ -67,3 +67,10 @@
 	 right: 2px;
 	 z-index: 10;
  }
+ 
+ .current-time {
+	 border: 1px solid #000000;
+	 width: 0px;
+	 height: 100%;
+	 position: absolute;
+ }
