--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-charts/portfolio-charts.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-charts/portfolio-charts.component.html
@@ -17,7 +17,10 @@
         ></app-portfolio-sectors>
       </ng-template>
     </mat-tab>
-    <mat-tab i18n-label="@@portfolioChartsTimechart" label="Portfolio Timechart">
+    <mat-tab
+      i18n-label="@@portfolioChartsTimechart"
+      label="Portfolio Timechart"
+    >
       <ng-template matTabContent>
         <app-portfolio-timechart
           [selPortfolio]="selPortfolio"
