--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-timechart/portfolio-timechart.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-timechart/portfolio-timechart.component.html
@@ -1,3 +1,7 @@
 <p>portfolio-timechart works!</p>
-<div>{{selPortfolio?.id}}</div>
-<app-date-time-chart [start]="start" [items]="items" [showDays]="showDays"></app-date-time-chart>
+<div>{{ selPortfolio?.id }}</div>
+<app-date-time-chart
+  [start]="start"
+  [items]="items"
+  [showDays]="showDays"
+></app-date-time-chart>
