feat: support multiple entries per line

--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/date-time-chart/date-time-chart.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/date-time-chart/date-time-chart.component.html
@@ -59,8 +59,8 @@
         </div>
       </div>
     </ng-container>
-    <div class="chart-line" *ngFor="let item of items">
-      <div
+    <div class="chart-line" *ngFor="let myItems of lineKeyToItems">
+      <div *ngFor="let item of myItems.items"
         class="stock-line"
         [style.width.px]="calcWidthPxItem(item)"
         [class.stock-line-start]="!!item.start"
