--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/date-time-chart/date-time-chart.component.scss
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/date-time-chart/date-time-chart.component.scss
@@ -20,9 +20,13 @@
   background-color: #adffb0;
 }
 
-.chart-line {
+.header-line {
   display: flex;
   flex-wrap: nowrap;
+}
+
+.chart-line {
+	display: block;	
 }
 
 .time-chart-header {
@@ -31,6 +35,7 @@
 }
 
 .stock-line {
+  position: relative;
   width: 100%;
   background-color: #f7f792;
   border-top: 1px solid #000000;
