--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-timechart/portfolio-timechart.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-timechart/portfolio-timechart.component.html
@@ -1,6 +1,6 @@
 <p>portfolio-timechart works!</p>
 <div>{{ selPortfolio?.id }}</div>
-<app-date-time-chart  
+<sc-date-time-chart  
   [items]="items"
   [showDays]="showDays"
-></app-date-time-chart>
+></sc-date-time-chart>
