--- a/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-timechart/portfolio-timechart.component.html
+++ b/frontend/src/angular/src/app/portfolios/portfolio-overview/components/portfolio-timechart/portfolio-timechart.component.html
@@ -1,4 +1,1 @@
-<sc-date-time-chart  
-  [items]="items"
-  [showDays]="showDays"
-></sc-date-time-chart>
+<sc-date-time-chart [items]="items" [showDays]="showDays"></sc-date-time-chart>
