feat: update frontend

--- a/frontend/src/angular/src/app/portfolios/components/overview/overview.component.html
+++ b/frontend/src/angular/src/app/portfolios/components/overview/overview.component.html
@@ -65,7 +65,7 @@
           <button mat-list-item (click)="selPortfolio(portfolio)">
             {{ portfolio.name }}
           </button>
-          <button
+          <button [disabled]="countPortfolioSymbolsByUserId > 250"
             mat-list-item
             (click)="addSymbol(portfolio)"
             class="add-button"
