--- a/frontend/src/angular/src/app/login/component/login/login.component.html
+++ b/frontend/src/angular/src/app/login/component/login/login.component.html
@@ -120,7 +120,7 @@
                 i18n-placeholder="@@loginRapidApiKey"
                 placeholder="RapidApiKey"
                 tabindex="5"
-                formControlName="{{ FormFields.AlphavantageKey }}"
+                formControlName="{{ FormFields.RapidApiKey }}"
               />
             </mat-form-field>
           </li>
@@ -156,7 +156,7 @@
             >
               Cancel
             </button>
-          </li>
+          </li>          
         </ul>
       </form>
     </mat-tab>
