--- a/frontend/src/angular/src/app/financial-data/components/import-financials/import-financials.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/import-financials/import-financials.component.html
@@ -2,9 +2,15 @@
   <form [formGroup]="financialsForm" novalidate>
     <ul class="list-style">
       <li>
+        @if(data.dataType === ImportDataType.Sec) {
         <h1 class="mat-h1" i18n="@@financialDataImport">
           Financialdata import
         </h1>
+        } @else {
+        <h1 class="mat-h1" i18n="@@dailyQuotesImport">
+          DailyQuotes import
+        </h1>
+        }
       </li>
       <li class="file-path">
         <span class="mat-body" i18n="@@filepath">Filepath: </span
