--- a/frontend/src/angular/src/app/financial-data/components/overview/overview.component.html
+++ b/frontend/src/angular/src/app/financial-data/components/overview/overview.component.html
@@ -2,16 +2,26 @@
   <mat-toolbar color="primary">
     <span i18n="@@overviewFinancialData">Financial Data</span>
     <span class="example-fill-remaining-space"></span>
-    <span class="header-space"
-      ><button
+        <span class="header-space">
+      <button
+        mat-flat-button
+        color="primary"
+        (click)="showDailyQuotesImport()"
+        i18n="@@importDailyQuotes"
+      >
+        Import DailyQuotes
+      </button>
+      </span>
+    <span class="header-space">
+      <button
         mat-flat-button
         color="primary"
         (click)="showFinancialsImport()"
         i18n="@@importFinancials"
       >
         Import Financials
-      </button></span
-    >
+      </button>
+      </span>
     <span
       ><button mat-flat-button color="primary" (click)="back()" i18n="@@back">
         Back
